--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Run Script Periodically
 
 on:
   schedule:
-    - cron: '45 * * * *'  # Isso fará com que o script execute a cada hora. Altere conforme necessário.
+    - cron: '0 */2 * * *'  # Isso fará com que o script execute a cada duas horas.
   workflow_dispatch:  # Permite a execução manual do workflow.
 
 jobs:
@@ -16,16 +16,17 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'  # Use a versão do Python que você precisa.
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install python-dotenv requests atproto  # Adicione outras dependências conforme necessário.
+          pip install python-dotenv requests atproto
 
       - name: Run the script
         env:
           BLUESKY_EMAIL: ${{ secrets.BLUESKY_EMAIL }}
           BLUESKY_PASSWORD: ${{ secrets.BLUESKY_PASSWORD }}
           PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
+          secrets: inherit  # Incluir secrets: inherit aqui
         run: python basic_script.py
