--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install python-dotenv requests atproto
-
+          
       - name: Run the script
         env:
           BLUESKY_EMAIL: ${{ secrets.BLUESKY_EMAIL }}
           BLUESKY_PASSWORD: ${{ secrets.BLUESKY_PASSWORD }}
           PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
-          secrets: inherit  # Incluir secrets: inherit aqui
-        run: python basic_script.py
+        run: |
+          echo "Running script"
+          python basic_script.py
+
